TRrrying to send socket request to single client to start playing, but not able to

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
         });  
       }
   });
+
+  socket.on('make_move', function(msg){
+      console.log(msg)
+      prompt(msg);
+  });
+
+  socket.on('error', function(error){
+      console.log("Something fucked :" + error);
+      })
 });
 </script>
   </body>
