--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       $.getJSON("api/game/" + msg['gameId'] + '/round/' + msg['round_number'] + '?playerSocketId=' + socket.id,function(data){
           var my_move = valid_move(data['current_cards'], data['valid_cards']);
           $.post("api/game/" + msg['gameId'] + '/round/' + msg['round_number'],{playerSocketId: socket.id, card: my_move }, function(data){
+              socket.emit('next_player', { playerSocketId: socket.id, game_id: msg['gameId'], round_number: msg['round_number'] })
             })
         });
   });
