Added continuity of game after a round finishes

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   socket.on('find_round_winner', function(msg){
       $.getJSON("api/game/" + msg['game_id'] + '/roundwinner/' + msg['round_number'], function(data){
           $('#messages').append($('<li>').text(data['winner'] + " won round :" + msg['round_number']));
+          socket.emit('got_round_winner', msg['game_id'])
       });
       });
 
